finish database.sql docs

--- a/example/Demo_Database_SQL.ipynb
+++ b/example/Demo_Database_SQL.ipynb
@@ -69,7 +69,7 @@
     }
    ],
    "source": [
-    "for table, value in db.get_tables().items():\n",
+    "for table, value in db.__get_tables().items():\n",
     "    print(table)\n",
     "    print(table.__name__)\n",
     "    print(value)\n",
