--- a/example/Demo_Database_SQL_Pipeline.ipynb
+++ b/example/Demo_Database_SQL_Pipeline.ipynb
@@ -64,7 +64,7 @@
     }
    ],
    "source": [
-    "for table in db.get_tables().values():\n",
+    "for table in db.__get_tables().values():\n",
     "    print(table)\n",
     "    \n",
     "db.Base.metadata"
