--- a/example/Demo_SQL_CRUD.ipynb
+++ b/example/Demo_SQL_CRUD.ipynb
@@ -72,7 +72,7 @@
     }
    ],
    "source": [
-    "for collection, table in db.get_tables().items():\n",
+    "for collection, table in db.__get_tables().items():\n",
     "    print(f'ndi_class: {collection.__name__.ljust(20)}sqla table: {table}')"
    ]
   },
