set up versioning relationships

--- a/example/Demo_Database_SQL_Pipeline.ipynb
+++ b/example/Demo_Database_SQL_Pipeline.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,9 +28,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'daq_systems': <RelationshipProperty at 0x11dfa9e40; no key>}\n",
+      "{'experiment': <RelationshipProperty at 0x11dfa9f40; no key>, 'probes': <RelationshipProperty at 0x11e021040; no key>, 'epochs': <RelationshipProperty at 0x11e0210c0; no key>, 'channels': <RelationshipProperty at 0x11e021140; no key>}\n",
+      "{'daq_system': <RelationshipProperty at 0x11e0211c0; no key>, 'channels': <RelationshipProperty at 0x11e021240; no key>}\n",
+      "{'daq_system': <RelationshipProperty at 0x11e0212c0; no key>, 'channels': <RelationshipProperty at 0x11e021340; no key>}\n",
+      "{'probe': <RelationshipProperty at 0x11e0213c0; no key>, 'epoch': <RelationshipProperty at 0x11e021440; no key>, 'daq_system': <RelationshipProperty at 0x11e0214c0; no key>}\n",
+      "{'experiment': <RelationshipProperty at 0x11e021540; no key>, 'parent': <RelationshipProperty at 0x11dfa9cc0; no key>, 'dependants': <RelationshipProperty at 0x11dfa9dc0; no key>}\n"
+     ]
+    }
+   ],
    "source": [
     "# Connect to database\n",
     "db = database.SQL('postgres://postgres:1Password!@localhost:5432/practice')"
@@ -38,11 +51,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'ndi.database.sql.experiments'>\n",
+      "<class 'ndi.database.sql.daq_systems'>\n",
+      "<class 'ndi.database.sql.probes'>\n",
+      "<class 'ndi.database.sql.epochs'>\n",
+      "<class 'ndi.database.sql.channels'>\n",
+      "<class 'ndi.database.sql.documents'>\n",
+      "<class 'ndi.database.sql.document_to_document'>\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "MetaData(bind=None)"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "for table in db.__get_tables().values():\n",
+    "for table in db.get_tables().values():\n",
     "    print(table)\n",
     "    \n",
     "db.Base.metadata"
@@ -50,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,9 +130,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[<ndi.experiment.Experiment object at 0x11e02f4c0>, <ndi.experiment.Experiment object at 0x11e02fa30>]\n"
+     ]
+    }
+   ],
    "source": [
     "experiments = db.find(Experiment)\n",
     "print(experiments)"
@@ -103,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,18 +169,97 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Experiments \n",
+      "\n",
+      "<ndi.experiment.Experiment object at 0x11e0b1ac0>\n",
+      "<ndi.experiment.Experiment object at 0x11e0b1070>\n",
+      "----------\n",
+      "DAQ systems \n",
+      "\n",
+      "<ndi.daq_system.DaqSystem object at 0x11dfc6850>\n",
+      "<ndi.daq_system.DaqSystem object at 0x11e0e3a90>\n",
+      "<ndi.daq_system.DaqSystem object at 0x11e1046d0>\n",
+      "<ndi.daq_system.DaqSystem object at 0x11e104400>\n",
+      "----------\n",
+      "Probes \n",
+      "\n",
+      "<ndi.probe.Probe object at 0x11e0b1be0>\n",
+      "<ndi.probe.Probe object at 0x11e0b1070>\n",
+      "<ndi.probe.Probe object at 0x11df694f0>\n",
+      "<ndi.probe.Probe object at 0x11e1058e0>\n",
+      "<ndi.probe.Probe object at 0x11e1053a0>\n",
+      "<ndi.probe.Probe object at 0x11e105940>\n",
+      "<ndi.probe.Probe object at 0x11e105100>\n",
+      "<ndi.probe.Probe object at 0x11e105b50>\n",
+      "----------\n",
+      "Epochs \n",
+      "\n",
+      "<ndi.epoch.Epoch object at 0x11df56970>\n",
+      "<ndi.epoch.Epoch object at 0x11e0b1ee0>\n",
+      "<ndi.epoch.Epoch object at 0x11e1047f0>\n",
+      "<ndi.epoch.Epoch object at 0x11e104c40>\n",
+      "<ndi.epoch.Epoch object at 0x11e104910>\n",
+      "<ndi.epoch.Epoch object at 0x11e104bb0>\n",
+      "<ndi.epoch.Epoch object at 0x11e104790>\n",
+      "<ndi.epoch.Epoch object at 0x11e1044c0>\n",
+      "<ndi.epoch.Epoch object at 0x11e1044f0>\n",
+      "<ndi.epoch.Epoch object at 0x11e104a90>\n",
+      "<ndi.epoch.Epoch object at 0x11e104df0>\n",
+      "<ndi.epoch.Epoch object at 0x11e104760>\n",
+      "----------\n",
+      "Channels \n",
+      "\n",
+      "<ndi.channel.Channel object at 0x11e0b1070>\n",
+      "<ndi.channel.Channel object at 0x11e0b1be0>\n",
+      "<ndi.channel.Channel object at 0x11e02fee0>\n",
+      "<ndi.channel.Channel object at 0x11e104400>\n",
+      "<ndi.channel.Channel object at 0x11e104eb0>\n",
+      "<ndi.channel.Channel object at 0x11e104a00>\n",
+      "<ndi.channel.Channel object at 0x11e1046a0>\n",
+      "<ndi.channel.Channel object at 0x11e104880>\n",
+      "<ndi.channel.Channel object at 0x11e104c10>\n",
+      "<ndi.channel.Channel object at 0x11e104af0>\n",
+      "<ndi.channel.Channel object at 0x11e1040d0>\n",
+      "<ndi.channel.Channel object at 0x11e104040>\n",
+      "----------\n"
+     ]
+    }
+   ],
    "source": [
     "show_all_in_tables()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'id': 'dbf37b31c3174931a6ed953a72feff02', 'flatbuffer': b'\\x14\\x00\\x00\\x00\\x00\\x00\\x0e\\x00\\x14\\x00\\x10\\x00\\x0c\\x00\\n\\x00\\t\\x00\\x04\\x00\\x0e\\x00\\x00\\x00\\x10\\x00\\x00\\x00\\x00\\x07\\x02\\x000\\x00\\x00\\x008\\x00\\x00\\x00 \\x00\\x00\\x003f69f55fbe5b42e4ab646b2ada766b94\\x00\\x00\\x00\\x00\\x05\\x00\\x00\\x00intan\\x00\\x00\\x00 \\x00\\x00\\x00dbf37b31c3174931a6ed953a72feff02\\x00\\x00\\x00\\x00', 'name': 'intan', 'reference': 2, 'type': 'sharp_vm', 'daq_system_id': '3f69f55fbe5b42e4ab646b2ada766b94'}\n",
+      "-----\n",
+      "{'id': 'dbf37b31c3174931a6ed953a72feff02', 'name': 'intan', 'reference': 2, 'type': 'sharp_vm', 'daq_system_id': '3f69f55fbe5b42e4ab646b2ada766b94'}\n",
+      "{'id': '5c75b1e961da4d6cbf44b47ba39e9db7', 'flatbuffer': b'\\x14\\x00\\x00\\x00\\x00\\x00\\x0e\\x00\\x14\\x00\\x10\\x00\\x0c\\x00\\n\\x00\\t\\x00\\x04\\x00\\x0e\\x00\\x00\\x00\\x10\\x00\\x00\\x00\\x00\\x07\\x02\\x000\\x00\\x00\\x008\\x00\\x00\\x00 \\x00\\x00\\x00080147be0182443ba9a12425b4b6c750\\x00\\x00\\x00\\x00\\x05\\x00\\x00\\x00intan\\x00\\x00\\x00 \\x00\\x00\\x005c75b1e961da4d6cbf44b47ba39e9db7\\x00\\x00\\x00\\x00', 'name': 'intan', 'reference': 2, 'type': 'sharp_vm', 'daq_system_id': '080147be0182443ba9a12425b4b6c750'}\n",
+      "-----\n",
+      "{'id': '5c75b1e961da4d6cbf44b47ba39e9db7', 'name': 'intan', 'reference': 2, 'type': 'sharp_vm', 'daq_system_id': '080147be0182443ba9a12425b4b6c750'}\n",
+      "{'id': '569d20437ed24b2cb676681d14bafee2', 'flatbuffer': b'\\x14\\x00\\x00\\x00\\x00\\x00\\x0e\\x00\\x14\\x00\\x10\\x00\\x0c\\x00\\n\\x00\\t\\x00\\x04\\x00\\x0e\\x00\\x00\\x00\\x10\\x00\\x00\\x00\\x00\\x07\\x02\\x000\\x00\\x00\\x008\\x00\\x00\\x00 \\x00\\x00\\x007ff4bccb53374e118a0e71013279045c\\x00\\x00\\x00\\x00\\x05\\x00\\x00\\x00intan\\x00\\x00\\x00 \\x00\\x00\\x00569d20437ed24b2cb676681d14bafee2\\x00\\x00\\x00\\x00', 'name': 'intan', 'reference': 2, 'type': 'sharp_vm', 'daq_system_id': '7ff4bccb53374e118a0e71013279045c'}\n",
+      "-----\n",
+      "{'id': '569d20437ed24b2cb676681d14bafee2', 'name': 'intan', 'reference': 2, 'type': 'sharp_vm', 'daq_system_id': '7ff4bccb53374e118a0e71013279045c'}\n",
+      "{'id': 'e47d009ca3d2448dbd024468279a1180', 'flatbuffer': b'\\x14\\x00\\x00\\x00\\x00\\x00\\x0e\\x00\\x14\\x00\\x10\\x00\\x0c\\x00\\n\\x00\\t\\x00\\x04\\x00\\x0e\\x00\\x00\\x00\\x10\\x00\\x00\\x00\\x00\\x07\\x02\\x000\\x00\\x00\\x008\\x00\\x00\\x00 \\x00\\x00\\x007bc0b8fa21024c03882b7f6e2e387c48\\x00\\x00\\x00\\x00\\x05\\x00\\x00\\x00intan\\x00\\x00\\x00 \\x00\\x00\\x00e47d009ca3d2448dbd024468279a1180\\x00\\x00\\x00\\x00', 'name': 'intan', 'reference': 2, 'type': 'sharp_vm', 'daq_system_id': '7bc0b8fa21024c03882b7f6e2e387c48'}\n",
+      "-----\n",
+      "{'id': 'e47d009ca3d2448dbd024468279a1180', 'name': 'intan', 'reference': 2, 'type': 'sharp_vm', 'daq_system_id': '7bc0b8fa21024c03882b7f6e2e387c48'}\n"
+     ]
+    }
+   ],
    "source": [
     "field = db._collections[Probe].fields\n",
     "filters = field['reference'] > 1\n",
@@ -149,9 +273,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "DELETING: [<ndi.experiment.Experiment object at 0x11e02f4c0>, <ndi.experiment.Experiment object at 0x11e02fa30>]\n"
+     ]
+    }
+   ],
    "source": [
     "print('DELETING:', experiments)\n",
     "db.delete(experiments)"
@@ -159,18 +291,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Experiments \n",
+      "\n",
+      "----------\n",
+      "DAQ systems \n",
+      "\n",
+      "----------\n",
+      "Probes \n",
+      "\n",
+      "----------\n",
+      "Epochs \n",
+      "\n",
+      "----------\n",
+      "Channels \n",
+      "\n",
+      "----------\n"
+     ]
+    }
+   ],
    "source": [
     "show_all_in_tables()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "**DELETE PROBES**\n",
+      "\n",
+      "Experiments \n",
+      "\n",
+      "<ndi.experiment.Experiment object at 0x11e1410a0>\n",
+      "----------\n",
+      "DAQ systems \n",
+      "\n",
+      "<ndi.daq_system.DaqSystem object at 0x11e1413d0>\n",
+      "<ndi.daq_system.DaqSystem object at 0x11e1413a0>\n",
+      "----------\n",
+      "Probes \n",
+      "\n",
+      "----------\n",
+      "Epochs \n",
+      "\n",
+      "<ndi.epoch.Epoch object at 0x11e1340d0>\n",
+      "<ndi.epoch.Epoch object at 0x11e134760>\n",
+      "<ndi.epoch.Epoch object at 0x11e134d30>\n",
+      "<ndi.epoch.Epoch object at 0x11e134310>\n",
+      "<ndi.epoch.Epoch object at 0x11e134dc0>\n",
+      "<ndi.epoch.Epoch object at 0x11e134cd0>\n",
+      "----------\n",
+      "Channels \n",
+      "\n",
+      "----------\n"
+     ]
+    }
+   ],
    "source": [
     "db.add_experiment(e)\n",
     "print('\\n**DELETE PROBES**\\n')\n",
@@ -180,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,9 +389,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{<class 'ndi.daq_system.DaqSystem'>: 'daq_systems'} \n",
+      "\n",
+      "\n",
+      "[<ndi.daq_system.DaqSystem object at 0x11e02fd30>, <ndi.daq_system.DaqSystem object at 0x11e02fcd0>]\n"
+     ]
+    }
+   ],
    "source": [
     "ds_col = db._collections[DaqSystem]\n",
     "e_col = db._collections[Experiment]\n",
@@ -220,9 +419,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'_sa_instance_state': <sqlalchemy.orm.state.InstanceState object at 0x11df69d60>, 'id': 'c2e7843d958f450484285dd7f008dac4', 'name': 'myExperiment3', 'flatbuffer': b'\\x0c\\x00\\x00\\x00\\x08\\x00\\x0c\\x00\\x08\\x00\\x04\\x00\\x08\\x00\\x00\\x00\\x08\\x00\\x00\\x00\\x18\\x00\\x00\\x00\\r\\x00\\x00\\x00myExperiment3\\x00\\x00\\x00 \\x00\\x00\\x00c2e7843d958f450484285dd7f008dac4\\x00\\x00\\x00\\x00', 'daq_systems': [<ndi.database.sql.daq_systems object at 0x11e1047f0>, <ndi.database.sql.daq_systems object at 0x11e104130>]}\n",
+      "<ndi.database.sql.daq_systems object at 0x11e1047f0> \n",
+      "\n",
+      "<ndi.database.sql.daq_systems object at 0x11e104130> \n",
+      "\n",
+      "<class 'sqlalchemy.orm.collections.InstrumentedList'> \n",
+      "\n",
+      "[<ndi.database.sql.probes object at 0x11e133070>, <ndi.database.sql.probes object at 0x11e133040>] \n",
+      "\n",
+      "<class 'sqlalchemy.orm.collections.InstrumentedList'> \n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "with db._sqla_open_session() as session:\n",
     "    results = session.query(e_col.table).all()\n",
@@ -245,9 +462,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "def "
-   ]
+   "source": []
   }
  ],
  "metadata": {
