move typehint imports under TYPE_CHECKING

--- a/example/Demo_SQL_Documents.ipynb
+++ b/example/Demo_SQL_Documents.ipynb
@@ -93,7 +93,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[<ndi.database.sql.Relationship object at 0x11c11d280>, <ndi.database.sql.Relationship object at 0x11c11d3d0>, <ndi.database.sql.Relationship object at 0x11c11d4c0>]\n",
+      "[<ndi.database.sql.Relationship object at 0x1128867f0>, <ndi.database.sql.Relationship object at 0x112886940>, <ndi.database.sql.Relationship object at 0x112886a30>]\n",
       "===\n",
       "\n",
       "experiment:  <class 'ndi.experiment.Experiment'>\n",
@@ -143,7 +143,7 @@
     {
      "data": {
       "text/plain": [
-       "<RelationshipProperty at 0x11c0a5440; documents>"
+       "<RelationshipProperty at 0x112811740; documents>"
       ]
      },
      "execution_count": 6,
@@ -183,9 +183,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "daq_systems\n",
-      "[<ndi.database.sql.daq_systems object at 0x11c2409d0>]\n",
-      "{'id': '1f5e9ece157e4283812c745e8c85905b', 'name': 'myExperiment', 'daq_systems': ['2659cdb748704f31be675a58bff9ad29']}\n",
       "Experiments\n",
       "  - myExperiment\n",
       "  ---NONE---\n",
@@ -236,10 +233,14 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "50a47e1032aa41858c066e195a7136a2\n"
+     "ename": "TypeError",
+     "evalue": "__init__() missing 1 required positional argument: 'name'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m-------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0mTraceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-8-1686ebe2f4b1>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# ADD AN INITIAL DOCUMENT (version 1)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m d1_v1 = Document(\n\u001b[0m\u001b[1;32m      4\u001b[0m     \u001b[0mexperiment_id\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mexp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mid\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0mversion_depth\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mTypeError\u001b[0m: __init__() missing 1 required positional argument: 'name'"
      ]
     }
    ],
@@ -257,20 +258,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "dependencies\n",
-      "[]\n",
-      "{'id': '50a47e1032aa41858c066e195a7136a2', 'experiment_id': '1f5e9ece157e4283812c745e8c85905b', 'document_type': '', 'version_depth': 0, 'file_id': '1234567890', 'parent_id': None, 'asc_path': '', 'dependencies': []}\n",
-      "50a47e1032aa41858c066e195a7136a2\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# SHOW DOCUMENT REFLECTED IN DATABASE\n",
     "\n",
@@ -286,20 +276,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<ndi.database.sql.experiments object at 0x11c1c4a60>\n",
-      "  1f5e9ece157e4283812c745e8c85905b\n",
-      "[<ndi.database.sql.documents object at 0x11c21ca60>]\n",
-      "  50a47e1032aa41858c066e195a7136a2\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# SHOW DOCUMENT REFLECTED IN EXPERIMENT\n",
     "\n",
@@ -322,18 +301,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2187b85a276a43ad8d63064ead50e5d8\n",
-      "0ef95ec5024f45a887733b296ed4d1fc\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# ADD NEW VERSIONS OF INITIAL DOCUMENT\n",
     "#   note that cleaner api will rely on db context\n",
@@ -359,26 +329,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "parent\n",
-      "<ndi.database.sql.documents object at 0x11c297a90>\n",
-      "  50a47e1032aa41858c066e195a7136a2\n",
-      "\n",
-      "children:\n",
-      "[<ndi.database.sql.documents object at 0x11c20e8e0>, <ndi.database.sql.documents object at 0x11c20e400>]\n",
-      "  2187b85a276a43ad8d63064ead50e5d8\n",
-      "      parent: 50a47e1032aa41858c066e195a7136a2\n",
-      "  0ef95ec5024f45a887733b296ed4d1fc\n",
-      "      parent: 50a47e1032aa41858c066e195a7136a2\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# SHOW DERIVED VERSIONS (children) IN INITIAL DOCUMENT REFLECTED IN DATABASE\n",
     "# SHOW PARENTs OF CHILDREN REFLECTED IN DATABASE\n",
@@ -405,18 +358,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "d515d34052cb4037890326cb22a4aa37\n",
-      "  with dependency: 50a47e1032aa41858c066e195a7136a2\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# ADD SECOND DOCUMENT THAT DEPENDS ON INITIAL DOCUMENT\n",
     "\n",
@@ -434,23 +378,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "second document\n",
-      "<ndi.database.sql.documents object at 0x11c294d90>\n",
-      "  d515d34052cb4037890326cb22a4aa37\n",
-      "\n",
-      "dependencies:\n",
-      "[<ndi.database.sql.documents object at 0x11c294ee0>]\n",
-      "  50a47e1032aa41858c066e195a7136a2\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# SHOW DOCUMENT AND DEPENDENCY REFLECTED IN DATABASE\n",
     "\n",
@@ -475,20 +405,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "083650d996b844f5b77d39eabd762e18\n",
-      "with dependencies: \n",
-      "  50a47e1032aa41858c066e195a7136a2\n",
-      "  d515d34052cb4037890326cb22a4aa37\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# ADD THIRD DOCUMENT THAT DEPENDS ON INITIAL AND SECOND DOCUMENTS\n",
     "\n",
@@ -506,24 +425,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "third document\n",
-      "<ndi.database.sql.documents object at 0x11c2b8c70>\n",
-      "  083650d996b844f5b77d39eabd762e18\n",
-      "\n",
-      "dependencies:\n",
-      "[<ndi.database.sql.documents object at 0x11c2b8df0>, <ndi.database.sql.documents object at 0x11c2b8e80>]\n",
-      "  50a47e1032aa41858c066e195a7136a2\n",
-      "  d515d34052cb4037890326cb22a4aa37\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# SHOW DOCUMENT AND DEPENDENCIES REFLECTED IN DATABASE\n",
     "\n",
@@ -548,24 +452,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "initial document\n",
-      "<ndi.database.sql.documents object at 0x11c2c8eb0>\n",
-      "  50a47e1032aa41858c066e195a7136a2\n",
-      "\n",
-      "dependants:\n",
-      "[<ndi.database.sql.documents object at 0x11c2c8b20>, <ndi.database.sql.documents object at 0x11c2c8c40>]\n",
-      "  d515d34052cb4037890326cb22a4aa37\n",
-      "  083650d996b844f5b77d39eabd762e18\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# SHOW DOCUMENT AND DEPENDANTS REFLECTED IN DATABASE\n",
     "\n",
@@ -583,68 +472,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'id': '083650d996b844f5b77d39eabd762e18',\n",
-       " 'flatbuffer': b'\\x18\\x00\\x00\\x00\\x14\\x00\\x1c\\x00\\x18\\x00\\x00\\x00\\x14\\x00\\x10\\x00\\x00\\x00\\x0c\\x00\\x08\\x00\\x04\\x00\\x14\\x00\\x00\\x00\\x18\\x00\\x00\\x00\\x1c\\x00\\x00\\x00 \\x00\\x00\\x00(\\x00\\x00\\x00,\\x00\\x00\\x00P\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x04\\x00\\x00\\x009876\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00 \\x00\\x00\\x001f5e9ece157e4283812c745e8c85905b\\x00\\x00\\x00\\x00 \\x00\\x00\\x00083650d996b844f5b77d39eabd762e18\\x00\\x00\\x00\\x00',\n",
-       " 'document_type': '',\n",
-       " 'file_id': '9876',\n",
-       " 'version_depth': 0,\n",
-       " 'asc_path': '',\n",
-       " 'experiment_id': '1f5e9ece157e4283812c745e8c85905b',\n",
-       " 'parent_id': None,\n",
-       " 'experiment': '1f5e9ece157e4283812c745e8c85905b',\n",
-       " 'dependencies': ['50a47e1032aa41858c066e195a7136a2',\n",
-       "  'd515d34052cb4037890326cb22a4aa37'],\n",
-       " 'dependants': []}"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "db.find_by_id(Document, d3_v1.id, as_sql_data=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "dependencies\n",
-      "[<ndi.database.sql.documents object at 0x11c2cde20>, <ndi.database.sql.documents object at 0x11c2cdeb0>]\n",
-      "{'id': '083650d996b844f5b77d39eabd762e18', 'experiment_id': '1f5e9ece157e4283812c745e8c85905b', 'document_type': '', 'version_depth': 0, 'file_id': '9876', 'parent_id': None, 'asc_path': '', 'dependencies': ['50a47e1032aa41858c066e195a7136a2', 'd515d34052cb4037890326cb22a4aa37']}\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "{'id': '083650d996b844f5b77d39eabd762e18',\n",
-       " 'experiment_id': '1f5e9ece157e4283812c745e8c85905b',\n",
-       " 'document_type': '',\n",
-       " 'version_depth': 0,\n",
-       " 'file_id': '9876',\n",
-       " 'parent_id': None,\n",
-       " 'asc_path': '',\n",
-       " 'dependencies': ['50a47e1032aa41858c066e195a7136a2',\n",
-       "  'd515d34052cb4037890326cb22a4aa37']}"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "db.find_by_id(Document, d3_v1.id).__dict__"
    ]
@@ -658,21 +497,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "RuntimeError",
-     "evalue": "No active exception to reraise",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m-------------\u001b[0m",
-      "\u001b[0;31mRuntimeError\u001b[0mTraceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-20-f67ab9a92d49>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mraise\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mdestroy_everything_in\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdb\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mRuntimeError\u001b[0m: No active exception to reraise"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "raise \n",
     "destroy_everything_in(db)"
